Fixed changing bet: isNaN(newBet.value) returned true when there was an empty string in the entry field. Javascript tried to convert empty string to a number first which is why there was an issue.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Player: <span id="player_balance"></span></p>
         <p>Dealer: <span id="dealer_balance"></span></p>
         <h3>🕹️ Game</h3>
-        <h4>Winner: <span id="winner"></span></h4>
+        <!-- <h4>Winner: <span id="winner"></span></h4> -->
         <!-- <h5>Game phase: <span id="game_phase"></span></h5><br> -->
         <div class="container" id="game_cards">
             <div id="dealer">
