--- a/index.html
+++ b/index.html
@@ -4,85 +4,97 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>🃏 Black Jack Game</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">	<script src="https://kit.fontawesome.com/8c71f66ca7.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="scripts/setDefaultTheme.js"></script>
-	<link rel="stylesheet" href="style/style.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">	<script src="https://kit.fontawesome.com/8c71f66ca7.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <script src="static/js/bootstrap.js"></script>
+    <script src="static/js/setDefaultTheme.js"></script>
+	<link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar sticky-top">
-            <div class="container-fluid">
-                <button class="btn btn-dark" id="toggle-theme-button"><i class="fa-solid fa-sun" id="toggle-theme-button-icon"></i></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">🏠 Home</a>
-                        </li>
-                    </ul>
+    <div class="wrapper">
+        <header>
+            <nav class="navbar sticky-top">
+                <div class="container-fluid">
+                    <button class="btn btn-dark" id="toggle-theme-button"><i class="fa-solid fa-sun" id="toggle-theme-button-icon"></i></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">🏠 Home</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
-    <br>
-    <div class="container"><h2>🃏 Black Jack Game</h2>
+            </nav>
+        </header>
         <br>
-        <h3>🏦 Balances</h3>
-        <p>Player: <span id="player_balance"></span></p>
-        <p>Dealer: <span id="dealer_balance"></span></p>
-        <h3>🕹️ Game</h3>
-        <!-- <h4>Winner: <span id="winner"></span></h4> -->
-        <!-- <h5>Game phase: <span id="game_phase"></span></h5><br> -->
-        <div class="container" id="game_cards">
-            <div id="dealer">
-                <div class="card mb-3 bg-success" style="max-width: 18rem;"><span>
-                    <div class="card-header" id="dealer_cards">Dealer Cards</div>
-                    <div class="card-body">
-                        <p class="card-text" id="dealer_hand"></p>
-                        <p class="card-text" id="dealer_hand_value"></p>
-                    </div>
-                </div>
-            </div>
-            <div id="player">
-                <div class="card bg-success mb-3" style="max-width: 18rem;">
-                    <div class="card-header" id="player_cards">Player Cards</div>
-                    <div class="card-body">
-                        <p class="card-text" id="player_hand"></p>
-                        <p class="card-text" id="player_hand_value"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container" id="bet_control">
-            <h3>💸 Bets</h3>
-            <p>Current bet: <span id="current_bet">10</span></p>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" id="new_bet" placeholder="New bet..." aria-label="New bet..." aria-describedby="button-addon2">
-                <button class="btn btn-primary" type="button" id="change_bet">Change Bet</button>
-            </div>
-            <br>
-        </div>
-        <div class="container" id="game_actions">
-            <button type="button" class="btn btn-primary" id="deal_button">Deal</button>
-            <button type="button" class="btn btn-primary" id="hit_button">Hit</button>
-            <button type="button" class="btn btn-primary" id="double_button">Double</button>
-            <button type="button" class="btn btn-primary" id="split_button">Split</button>
-            <button type="button" class="btn btn-primary" id="stand_button">Stand</button>
-            <!-- <button type="button" class="btn btn-danger" id="quit_button">Quit</button> -->
-        </div>
         <div class="container">
-            <br><br>
-            <h3></h3>
-            <h3>🎢 Balance History</h3>
-            <canvas id="balance_chart"></canvas>
-            <h3>📜 Game History</h3>
-            <ol id="history">
-            </ol>
-        </div>
+            <h2>🃏 Black Jack Game</h2>
+            <br>
+            <!-- <h4>Winner: <span id="winner"></span></h4> -->
+            <!-- <h5>Game phase: <span id="game_phase"></span></h5><br> -->
+            <div class="container" id="game_cards">
+                <div id="dealer">
+                    <div class="card mb-3 bg-success" style="max-width: 18rem;">
+                        <div class="card-header" id="dealer_card_header">
+                            <h5>Dealer: <span id="dealer_balance"></span> $</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text" id="dealer_hand"></p>
+                            <p class="card-text" id="dealer_hand_value"></p>
+                        </div>
+                    </div>
+                </div>
+                <div id="player">
+                    <div class="card bg-success mb-3" style="max-width: 18rem;">
+                        <div class="card-header" id="player_card_header">
+                            <h5>Player: <span id="player_balance"></span> $</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text" id="player_hand"></p>
+                            <p class="card-text" id="player_hand_value"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container" id="bet_control">
+                <h3>💸 Bets</h3>
+                <p>Current bet: <span id="current_bet">10</span></p>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="new_bet" placeholder="New bet..." aria-label="New bet..." aria-describedby="button-addon2">
+                    <button class="btn btn-primary" type="button" id="change_bet">Change Bet</button>
+                </div>
+                <br>
+            </div>
+            <div class="container" id="game_actions">
+                <button type="button" class="btn btn-primary" id="deal_button">Deal</button>
+                <button type="button" class="btn btn-primary" id="hit_button">Hit</button>
+                <button type="button" class="btn btn-primary" id="double_button">Double</button>
+                <button type="button" class="btn btn-primary" id="split_button">Split</button>
+                <button type="button" class="btn btn-primary" id="stand_button">Stand</button>
+                <!-- <button type="button" class="btn btn-danger" id="quit_button">Quit</button> -->
+                 
+            </div>
+            <div class="container">
+                <br><br>
+                <h3></h3>
+                <h3>🎢 Balance History</h3>
+                <canvas id="balance_chart"></canvas>
+                <h3>📜 Game History</h3>
+                <ol id="history">
+                </ol>
+            </div>
 
+        </div>
+        <br>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script> -->
+        <script src="static/js/app.js"></script>
+        <script src="static/js/theme.js"></script>
+        <footer>
+            <div class="footer">
+                <h3>Social Links</h3>
+            </div>
+        </footer>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="scripts/theme.js"></script>
 </body>
 </html>
