Added button to reset balances

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                 <button type="button" class="btn btn-primary" id="double_button">Double</button>
                 <button type="button" class="btn btn-primary" id="split_button">Split</button>
                 <button type="button" class="btn btn-primary" id="stand_button">Stand</button>
+                <button type="button" class="btn btn-warning" id="reset_button">Reset Balances</button>
                 <!-- <button type="button" class="btn btn-danger" id="quit_button">Quit</button> -->
-                 
+
             </div>
             <div class="container">
                 <br><br>
