Cash transactions fixed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <br>
         <div class="container">
             <h2>🃏 Black Jack Game</h2>
+            <h1 id="blackjack_message">BLACKJACK !!</h1>
             <br>
             <!-- <h4>Winner: <span id="winner"></span></h4> -->
             <!-- <h5>Game phase: <span id="game_phase"></span></h5><br> -->
@@ -93,7 +94,8 @@
         <script src="static/js/theme.js"></script>
         <footer>
             <div class="footer">
-                <h3>Social Links</h3>
+                <h3>Github</h3>
+                <h3>Linkedin</h3>
             </div>
         </footer>
     </div>
