--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>🃏 Black Jack Game</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">	<script src="https://kit.fontawesome.com/8c71f66ca7.js" crossorigin="anonymous"></script> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/8c71f66ca7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <script src="static/js/bootstrap.js"></script>
     <script src="static/js/setDefaultTheme.js"></script>
@@ -94,8 +95,7 @@
         <script src="static/js/theme.js"></script>
         <footer>
             <div class="footer">
-                <h3>Github</h3>
-                <h3>Linkedin</h3>
+                <a href="https://github.com/pfra17" target="_blank"><i class="fa-4x fa-brands fa-github"></i></a>
             </div>
         </footer>
     </div>
