Fixed footer position and re-enabled chart

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <h3></h3>
                 <h3>🎢 Balance History</h3>
                 <canvas id="balance_chart"></canvas>
+                <br><br>
                 <h3>📜 Game History</h3>
                 <ol id="history">
                 </ol>
@@ -90,7 +91,7 @@
 
         </div>
         <br>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
         <script src="static/js/app.js"></script>
         <script src="static/js/theme.js"></script>
         <footer>
