--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <script src="static/js/theme.js"></script>
         <footer>
             <div class="footer">
-                <a href="https://github.com/pfra17" target="_blank"><i class="fa-4x fa-brands fa-github"></i></a>
+                <a href="https://github.com/nycto404" target="_blank"><i class="fa-4x fa-brands fa-github"></i></a>
             </div>
         </footer>
     </div>
